fix: Table Header Wrapping (#219)
* fix: table header wrapping.

* Fix failing test.

* Fix another failing test.

* Fix layout issue with header.

--- a/src/components/Table/TableHeaderCell/TableHeaderCell.module.scss
+++ b/src/components/Table/TableHeaderCell/TableHeaderCell.module.scss
@@ -34,6 +34,11 @@
     text-align: center;
   }
 
+  .heading,
+  .sort-icon {
+    display: inline-block;
+  }
+
   .heading {
     white-space: initial;
   }
